--- a/template/viewtopic_body.html
+++ b/template/viewtopic_body.html
@@ -18,44 +18,7 @@
 <!-- ENDIF -->
 
 <div class="row-fluid topic-actions">
-  <!-- IF not S_IS_BOT and S_DISPLAY_REPLY_INFO -->
-    <div class="span4 buttons">
-      <!-- IF S_IS_LOCKED -->
-        <div class="locked-icon" title="{L_TOPIC_LOCKED}"><a href="{U_POST_REPLY_TOPIC}"><span></span>{L_TOPIC_LOCKED_SHORT}</a></div>
-      <!-- ELSE -->
-        <div class="reply-icon" title="{L_POST_REPLY}"><a href="{U_POST_REPLY_TOPIC}"><span></span>{L_POST_REPLY}</a></div>
-      <!-- ENDIF -->
-    </div>
-  <!-- ENDIF -->
-
-  <!-- IF PAGINATION or TOTAL_POSTS -->
-    <div class="span4 p-pagination">
-      <!-- IF not S_IS_BOT -->
-        <a href="{U_VIEW_UNREAD_POST}">{L_VIEW_UNREAD_POST}</a>
-      <!-- ENDIF -->
-      &bull; <span>{TOTAL_POSTS}</span>
-      <!-- IF PAGE_NUMBER -->
-        <!-- IF PAGINATION -->
-          &bull; <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"><span>{PAGE_NUMBER}</span></a> &bull; <span>{PAGINATION}</span>
-        <!-- ELSE -->
-          &bull; <span>{PAGE_NUMBER}</span>
-        <!-- ENDIF -->
-      <!-- ENDIF -->
-    </div>
-  <!-- ENDIF -->
-
-  <!-- IF S_DISPLAY_SEARCHBOX -->
-    <div class="span4">
-      <form method="get" id="topic-search" action="{S_SEARCHBOX_ACTION}" class="form-search pull-right" style="margin:0;">
-        <fieldset>
-          <input class="input-medium search"  type="text" name="keywords" id="search_keywords" size="20" placeholder="{L_SEARCH_TOPIC}" />
-          <button class="btn" type="submit">{L_SEARCH}</button>
-          {S_SEARCH_LOCAL_HIDDEN_FIELDS}
-        </fieldset>
-      </form>
-    </div>
-  <!-- ENDIF -->
-
+  <!-- INCLUDE viewtopic_buttons.html -->
 </div>
 <div class="clear"></div>
 
@@ -66,7 +29,7 @@
 		<div class="well">
 
 		<div class="content">
-			<h2>{POLL_QUESTION}</h2>
+			<h4>{POLL_QUESTION}</h4>
 			<p class="author">{L_POLL_LENGTH}<!-- IF S_CAN_VOTE and L_POLL_LENGTH --><br /><!-- ENDIF --><!-- IF S_CAN_VOTE -->{L_MAX_VOTES}<!-- ENDIF --></p>
 
 			<fieldset class="polls">
@@ -135,7 +98,7 @@
 			<!-- ENDIF -->
 		<!-- ENDIF -->
 
-			<h3 <!-- IF postrow.S_FIRST_ROW -->class="first"<!-- ENDIF -->><!-- IF postrow.POST_ICON_IMG --><img src="{T_ICONS_PATH}{postrow.POST_ICON_IMG}" width="{postrow.POST_ICON_IMG_WIDTH}" height="{postrow.POST_ICON_IMG_HEIGHT}" alt="" /> <!-- ENDIF --><a href="#p{postrow.POST_ID}">{postrow.POST_SUBJECT}</a></h3>
+			<h4 <!-- IF postrow.S_FIRST_ROW -->class="first"<!-- ENDIF -->><!-- IF postrow.POST_ICON_IMG --><img src="{T_ICONS_PATH}{postrow.POST_ICON_IMG}" width="{postrow.POST_ICON_IMG_WIDTH}" height="{postrow.POST_ICON_IMG_HEIGHT}" alt="" /> <!-- ENDIF --><a href="#p{postrow.POST_ID}">{postrow.POST_SUBJECT}</a></h4>
 			<p class="author"><!-- IF S_IS_BOT -->{postrow.MINI_POST_IMG}<!-- ELSE --><a href="{postrow.U_MINI_POST}">{postrow.MINI_POST_IMG}</a><!-- ENDIF -->{L_POST_BY_AUTHOR} <strong>{postrow.POST_AUTHOR_FULL}</strong> &raquo; {postrow.POST_DATE} </p>
 
 			<!-- IF postrow.S_POST_UNAPPROVED or postrow.S_POST_REPORTED -->
@@ -268,43 +231,7 @@
 <!-- ENDIF -->
 
 <div class="row-fluid topic-actions">
-  <!-- IF not S_IS_BOT and S_DISPLAY_REPLY_INFO -->
-    <div class="span4 buttons">
-      <!-- IF S_IS_LOCKED -->
-        <div class="locked-icon" title="{L_TOPIC_LOCKED}"><a href="{U_POST_REPLY_TOPIC}"><span></span>{L_TOPIC_LOCKED_SHORT}</a></div>
-      <!-- ELSE -->
-        <div class="reply-icon" title="{L_POST_REPLY}"><a href="{U_POST_REPLY_TOPIC}"><span></span>{L_POST_REPLY}</a></div>
-      <!-- ENDIF -->
-    </div>
-  <!-- ENDIF -->
-
-  <!-- IF PAGINATION or TOTAL_POSTS -->
-    <div class="span4 p-pagination">
-      <!-- IF not S_IS_BOT -->
-        <a href="{U_VIEW_UNREAD_POST}">{L_VIEW_UNREAD_POST}</a>
-      <!-- ENDIF -->
-      &bull; <span>{TOTAL_POSTS}</span>
-      <!-- IF PAGE_NUMBER -->
-        <!-- IF PAGINATION -->
-          &bull; <a href="#" onclick="jumpto(); return false;" title="{L_JUMP_TO_PAGE}"><span>{PAGE_NUMBER}</span></a> &bull; <span>{PAGINATION}</span>
-        <!-- ELSE -->
-          &bull; <span>{PAGE_NUMBER}</span>
-        <!-- ENDIF -->
-      <!-- ENDIF -->
-    </div>
-  <!-- ENDIF -->
-
-  <!-- IF S_DISPLAY_SEARCHBOX -->
-    <div class="span4">
-      <form method="get" id="topic-search" action="{S_SEARCHBOX_ACTION}" class="form-search pull-right" style="margin:0;">
-        <fieldset>
-          <input class="input-medium search"  type="text" name="keywords" id="search_keywords" size="20" placeholder="{L_SEARCH_TOPIC}" />
-          <button class="btn" type="submit">{L_SEARCH}</button>
-          {S_SEARCH_LOCAL_HIDDEN_FIELDS}
-        </fieldset>
-      </form>
-    </div>
-  <!-- ENDIF -->
+  <!-- INCLUDE viewtopic_buttons.html -->
 </div>
 
 <!-- INCLUDE jumpbox.html -->
