--- a/template/message_body.html
+++ b/template/message_body.html
@@ -1,19 +1,21 @@
 <!-- IF S_SIMPLE_MESSAGE -->
-	<!-- INCLUDE simple_header.html -->
+  <!-- INCLUDE simple_header.html -->
 <!-- ELSE -->
-	<!-- INCLUDE overall_header.html -->
+  <!-- INCLUDE overall_header.html -->
 <!-- ENDIF -->
 
-<div class="row-fluid panel" id="message">
-	<div class="well">
-	<h3 class="box-heading">{MESSAGE_TITLE}</h3>
-	<p>{MESSAGE_TEXT}</p>
-	<!-- IF SCRIPT_NAME == "search" and not S_BOARD_DISABLED and not S_NO_SEARCH and L_RETURN_TO_SEARCH_ADV --><p><a href="{U_SEARCH}" class="{S_CONTENT_FLOW_BEGIN}">{L_RETURN_TO_SEARCH_ADV}</a></p><!-- ENDIF -->
-	</div>
+<div class="panel row-fluid">
+  <div class="well">
+    <h4>{MESSAGE_TITLE}</h4>
+    <p>{MESSAGE_TEXT}</p>
+    <!-- IF SCRIPT_NAME == "search" and not S_BOARD_DISABLED and not S_NO_SEARCH and L_RETURN_TO_SEARCH_ADV -->
+      <p><a href="{U_SEARCH}" class="{S_CONTENT_FLOW_BEGIN}">{L_RETURN_TO_SEARCH_ADV}</a></p>
+    <!-- ENDIF -->
+  </div>
 </div>
 
 <!-- IF S_SIMPLE_MESSAGE -->
-	<!-- INCLUDE simple_footer.html -->
+  <!-- INCLUDE simple_footer.html -->
 <!-- ELSE -->
-	<!-- INCLUDE overall_footer.html -->
+  <!-- INCLUDE overall_footer.html -->
 <!-- ENDIF -->
