--- a/template/overall_footer.html
+++ b/template/overall_footer.html
@@ -1,19 +1,19 @@
 
     <div id="page-footer" class="container">
 
-      <div class="breadcrumbalike">
-        <ul class="rightside">
-          <li><!-- IF U_TEAM --><a href="{U_TEAM}">{L_THE_TEAM}</a> &bull; <!-- ENDIF --><!-- IF not S_IS_BOT --><a href="{U_DELETE_COOKIES}">{L_DELETE_COOKIES}</a> &bull; <!-- ENDIF -->{S_TIMEZONE}</li>
-        </ul>
-
-        <ul>
+      <div class="well naked">
+        <ul class="linklist leftside">
           <li class="phpbb-icon-home"><a href="{U_INDEX}" accesskey="h">{L_INDEX}</a></li>
             <!-- IF not S_IS_BOT -->
-              <!-- IF S_WATCH_FORUM_LINK --> &bull; <li <!-- IF S_WATCHING_FORUM -->class="phpbb-icon-unsubscribe"<!-- ELSE -->class="phpbb-icon-subscribe"<!-- ENDIF -->><a href="{S_WATCH_FORUM_LINK}" title="{S_WATCH_FORUM_TITLE}">{S_WATCH_FORUM_TITLE}</a></li><!-- ENDIF -->
-              <!-- IF U_WATCH_TOPIC --> &bull; <li <!-- IF S_WATCHING_TOPIC -->class="phpbb-icon-unsubscribe"<!-- ELSE -->class="phpbb-icon-subscribe"<!-- ENDIF -->><a href="{U_WATCH_TOPIC}" title="{L_WATCH_TOPIC}">{L_WATCH_TOPIC}</a></li><!-- ENDIF -->
-              <!-- IF U_BOOKMARK_TOPIC --> &bull; <li class="phpbb-icon-bookmark"><a href="{U_BOOKMARK_TOPIC}" title="{L_BOOKMARK_TOPIC}">{L_BOOKMARK_TOPIC}</a></li><!-- ENDIF -->
-              <!-- IF U_BUMP_TOPIC --> &bull; <li class="phpbb-icon-bump"><a href="{U_BUMP_TOPIC}" title="{L_BUMP_TOPIC}">{L_BUMP_TOPIC}</a></li><!-- ENDIF -->
+              <!-- IF S_WATCH_FORUM_LINK --><li <!-- IF S_WATCHING_FORUM -->class="phpbb-icon-unsubscribe"<!-- ELSE -->class="phpbb-icon-subscribe"<!-- ENDIF -->><a href="{S_WATCH_FORUM_LINK}" title="{S_WATCH_FORUM_TITLE}">{S_WATCH_FORUM_TITLE}</a></li><!-- ENDIF -->
+              <!-- IF U_WATCH_TOPIC --><li <!-- IF S_WATCHING_TOPIC -->class="phpbb-icon-unsubscribe"<!-- ELSE -->class="phpbb-icon-subscribe"<!-- ENDIF -->><a href="{U_WATCH_TOPIC}" title="{L_WATCH_TOPIC}">{L_WATCH_TOPIC}</a></li><!-- ENDIF -->
+              <!-- IF U_BOOKMARK_TOPIC --><li class="phpbb-icon-bookmark"><a href="{U_BOOKMARK_TOPIC}" title="{L_BOOKMARK_TOPIC}">{L_BOOKMARK_TOPIC}</a></li><!-- ENDIF -->
+              <!-- IF U_BUMP_TOPIC --><li class="phpbb-icon-bump"><a href="{U_BUMP_TOPIC}" title="{L_BUMP_TOPIC}">{L_BUMP_TOPIC}</a></li><!-- ENDIF -->
             <!-- ENDIF -->
+        </ul>
+        
+        <ul class="linklist rightside">
+          <li><!-- IF U_TEAM --><a href="{U_TEAM}">{L_THE_TEAM}</a> &bull; <!-- ENDIF --><!-- IF not S_IS_BOT --><a href="{U_DELETE_COOKIES}">{L_DELETE_COOKIES}</a> &bull; <!-- ENDIF -->{S_TIMEZONE}</li>
         </ul>
       </div>
 
