--- a/theme/stylesheet.css
+++ b/theme/stylesheet.css
@@ -22,6 +22,8 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700);
 @import url("/wp-content/themes/lonbrew-wp/assets/css/lonbrew.css");
 
+/* Elements */
+
 body {
   padding-top: 0;
 }
@@ -43,25 +45,23 @@ body {
   margin-bottom: 10px;
 }
 
-.breadcrumbalike > ul {
-  padding: 8px 15px;
-  margin: 0 0 20px;
-  list-style: none;
-  background-color: #f5f5f5;
-  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px;
+/* Components */
 
+.well.naked {
+  border: none;
+  -webkit-box-shadow: none;
+     -moz-box-shadow: none;
+  		  box-shadow: none;
+  padding: 10px 17px;
+  overflow: auto;
 }
 
-.breadcrumbalike > ul > li {
-  display: inline-block;
-  *display: inline;
-  text-shadow: 0 1px 0 #ffffff;
-  *zoom: 1;
+.well.naked > ul {
+  margin-bottom: 0;
 }
 
-.breadcrumb > ul > li > .divider {
+
+.divider {
   padding: 0 5px;
   color: #ccc;
 }
