use dashed hr's

--- a/template/ucp_register.html
+++ b/template/ucp_register.html
@@ -116,7 +116,7 @@
       {S_HIDDEN_FIELDS}
       {S_FORM_TOKEN}
 
-      <hr />
+      <hr class="dashed" />
       <div class="control-group">
         <div class="controls">
           <input type="submit" name="submit" id="submit" value="{L_SUBMIT}" class="btn btn-primary default-submit-action" />
