--- a/template/ucp_agreement.html
+++ b/template/ucp_agreement.html
@@ -31,7 +31,7 @@
         <h3>{SITENAME} - {L_REGISTRATION}</h3>
         <p><!-- IF S_SHOW_COPPA -->{L_COPPA_BIRTHDAY}<!-- ELSE -->{L_TERMS_OF_USE}<!-- ENDIF --></p>
 
-        <hr />
+        <hr class="dashed" />
         <fieldset class="submit-buttons">
           <!-- IF S_SHOW_COPPA -->
             <strong><a href="{U_COPPA_NO}" class="btn btn-primary">{L_COPPA_NO}</a></strong>&nbsp; <a href="{U_COPPA_YES}" class="btn btn-danger">{L_COPPA_YES}</a>
