--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -111,7 +111,7 @@
               <ul class="nav">
                 <li><a href="/">Home</a></li>
                 <li><a href="/news-and-updates">News and Updates</a></li>
-                <li><a href="/meeting-schedule">Meeting Schedule</a></li>
+                <li><a href="/meetings-and-events">Meetings &amp; Events</a></li>
                 <li><a href="/our-favourite-pubs">Our Favourite Pubs</a></li>
                 <li class="active"><a href="/forum">Forum</a></li>
               </ul>
