--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -109,7 +109,7 @@
 
             <div class="nav-collapse collapse">
               <ul class="nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/">About Us</a></li>
                 <li><a href="/news-and-updates">News and Updates</a></li>
                 <li><a href="/meetings-and-events">Meetings &amp; Events</a></li>
                 <li><a href="/our-favourite-pubs">Our Favourite Pubs</a></li>
