Add a contact link to the navbar

--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -113,6 +113,7 @@
                 <li><a href="/news-and-updates">News and Updates</a></li>
                 <li><a href="/meetings-and-events">Meetings &amp; Events</a></li>
                 <li><a href="/our-favourite-pubs">Our Favourite Pubs</a></li>
+                <li><a href="/contact">Contact Us</a></li>
                 <li class="active"><a href="/forum">Forum</a></li>
               </ul>
             </div><!--/.nav-collapse -->
