--- a/template/viewforum_body.html
+++ b/template/viewforum_body.html
@@ -106,8 +106,6 @@
 <!-- IF S_SELECT_SORT_DAYS and not S_DISPLAY_ACTIVE -->
 	<form method="post" action="{S_FORUM_ACTION}" class="well form-inline">
 		<fieldset class="display-options">
-			<!-- IF PREVIOUS_PAGE --><a class="btn btn-inverse" href="{PREVIOUS_PAGE}" class="left-box {S_CONTENT_FLOW_BEGIN}">{L_PREVIOUS}</a><!-- ENDIF -->
-			<!-- IF NEXT_PAGE --><a class="btn btn-inverse" href="{NEXT_PAGE}" class="right-box {S_CONTENT_FLOW_END}">{L_NEXT}</a><!-- ENDIF -->
 	<!-- IF not S_IS_BOT -->
 			<label>{L_DISPLAY_TOPICS}: {S_SELECT_SORT_DAYS}</label>
 			<label>{L_SORT_BY} {S_SELECT_SORT_KEY}</label>
@@ -116,6 +114,24 @@
 		</fieldset>
 	</form>
 
+  <div class="row-fluid">
+    <div class="span6">
+      <!-- IF PREVIOUS_PAGE -->
+        <a class="btn btn-info" href="{PREVIOUS_PAGE}">
+          <i class="icon-chevron-left icon-white"></i> {L_PREVIOUS}
+        </a>
+      <!-- ENDIF -->
+    </div>
+    <div class="span6">
+      <!-- IF NEXT_PAGE -->
+        <a class="btn btn-info pull-right" href="{NEXT_PAGE}">
+          {L_NEXT} <i class="icon-chevron-right icon-white"></i>
+        </a>
+      <!-- ENDIF -->
+    </div>
+  </div>
+
+  <hr class="divider" />
 <!-- ENDIF -->
 
 <!-- IF .topicrow and not S_DISPLAY_ACTIVE -->
