--- a/template/viewforum_buttons.html
+++ b/template/viewforum_buttons.html
@@ -5,11 +5,21 @@
     <!-- ELSE -->
       <div class="post-icon" title="{L_POST_TOPIC}"><a href="{U_POST_NEW_TOPIC}"><span></span>{L_POST_TOPIC}</a></div>
     <!-- ENDIF -->
+
+    <!-- IF S_DISPLAY_SEARCHBOX -->
+      <form action="{S_SEARCHBOX_ACTION}" method="get" id="forum-search">
+        <div class="input-append">
+          {S_SEARCH_LOCAL_HIDDEN_FIELDS}
+          <input class="input-medium" type="text" name="keywords" id="search_keywords" placeholder="{L_SEARCH_FORUM}" />
+          <button type="submit" class="btn">{L_SEARCH}</button>
+        </div>
+      </form>
+    <!-- ENDIF -->
   </div>
 <!-- ENDIF -->
 
 <!-- IF PAGINATION or TOTAL_POSTS or TOTAL_TOPICS -->
-  <div class="p-pagination span4">
+  <div class="p-pagination span8 text-right">
     <!-- IF not S_IS_BOT -->
       <a href="{U_MARK_TOPICS}" accesskey="m">{L_MARK_TOPICS_READ}</a>
     <!-- ENDIF -->
@@ -26,15 +36,4 @@
   </div>
 <!-- ENDIF -->
 
-<!-- IF S_DISPLAY_SEARCHBOX -->
-  <div class="span4">
-    <form action="{S_SEARCHBOX_ACTION}" method="get" id="forum-search" class="form-search pull-right" style="margin:0;">
-      <fieldset>
-        <input class="input-medium search" type="text" name="keywords" id="search_keywords" size="20" placeholder="{L_SEARCH_FORUM}" />
-        <button type="submit" class="btn">{L_SEARCH}</button>
-        {S_SEARCH_LOCAL_HIDDEN_FIELDS}
-      </fieldset>
-    </form>
-  </div>
-<!-- ENDIF -->
 
