--- a/template/viewtopic_body.html
+++ b/template/viewtopic_body.html
@@ -192,32 +192,47 @@
 
 <!-- IF S_TOPIC_MOD -->
 <div class="row-fluid">
-	<div class="span12 well">
-	<h3 class="box-heading">{L_QUICK_MOD}</h3>
-	<form method="post" action="{S_MOD_ACTION}" class="form-inline alert-danger">
-	<fieldset class="quickmod">
-		{S_TOPIC_MOD} <input type="submit" value="{L_GO}" class="btn" />
-		{S_FORM_TOKEN}
-	</fieldset>
-	</form>
-	</div>
+  <div class="span12 well">
+    <h4>{L_QUICK_MOD}</h4>
+    <form method="post" action="{S_MOD_ACTION}" class="form-inline alert-danger">
+      <fieldset class="quickmod">
+        {S_TOPIC_MOD} <input type="submit" value="{L_GO}" class="btn" />
+        {S_FORM_TOKEN}
+      </fieldset>
+    </form>
+  </div>
 </div>
 <!-- ENDIF -->
 
 <!-- IF S_NUM_POSTS > 1 or PREVIOUS_PAGE -->
-	<form id="viewtopic" method="post" action="{S_TOPIC_ACTION}" class="well form-inline">
+    <form id="viewtopic" method="post" action="{S_TOPIC_ACTION}" class="well form-inline">
+    <fieldset class="display-options" style="margin-top: 0; ">
+      <!-- IF not S_IS_BOT -->
+      <label>{L_DISPLAY_POSTS}: {S_SELECT_SORT_DAYS}</label>
+      <label>{L_SORT_BY} {S_SELECT_SORT_KEY}</label> <label>{S_SELECT_SORT_DIR} <input type="submit" name="sort" value="{L_GO}" class="btn" /></label>
+      <!-- ENDIF -->
+    </fieldset>
 
-	<fieldset class="display-options" style="margin-top: 0; ">
-		<!-- IF PREVIOUS_PAGE --><a class="btn btn-inverse pull-left" href="{PREVIOUS_PAGE}" class="left-box {S_CONTENT_FLOW_BEGIN}"><i class="icon-chevron-left icon-white"></i> {L_PREVIOUS}</a><!-- ENDIF -->
-		<!-- IF NEXT_PAGE --><a class="btn btn-inverse pull-right" href="{NEXT_PAGE}" class="right-box {S_CONTENT_FLOW_END}">{L_NEXT} <i class="icon-chevron-right icon-white"></i></a><!-- ENDIF -->
-		<!-- IF not S_IS_BOT -->
-		<label>{L_DISPLAY_POSTS}: {S_SELECT_SORT_DAYS}</label>
-		<label>{L_SORT_BY} {S_SELECT_SORT_KEY}</label> <label>{S_SELECT_SORT_DIR} <input type="submit" name="sort" value="{L_GO}" class="btn" /></label>
-		<!-- ENDIF -->
-	</fieldset>
+    </form>
 
-	</form>
+  <div class="row-fluid">
+    <div class="span6">
+      <!-- IF PREVIOUS_PAGE -->
+        <a class="btn btn-info" href="{PREVIOUS_PAGE}">
+          <i class="icon-chevron-left icon-white"></i> {L_PREVIOUS}
+        </a>
+      <!-- ENDIF -->
+    </div>
+    <div class="span6 text-right">
+      <!-- IF NEXT_PAGE -->
+        <a class="btn btn-info" href="{NEXT_PAGE}">
+          {L_NEXT} <i class="icon-chevron-right icon-white"></i>
+        </a>
+      <!-- ENDIF -->
+    </div>
+  </div>
 
+  <hr class="divider" />
 <!-- ENDIF -->
 
 <div class="row-fluid topic-actions">
