--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -99,7 +99,7 @@
   <nav>
     <div class="navbar-wrapper">
       <div class="container">
-        <div class="navbar">
+        <div class="navbar nav">
           <div class="navbar-inner">
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
               <span class="icon-bar"></span>
@@ -110,11 +110,22 @@
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li><a href="/">About Us</a></li>
-                <li><a href="/news-and-updates">News and Updates</a></li>
-                <li><a href="/meetings-and-events">Meetings &amp; Events</a></li>
-                <li><a href="/our-favourite-pubs">Our Favourite Pubs</a></li>
-                <li><a href="/contact">Contact Us</a></li>
-                <li class="active"><a href="/forum">Forum</a></li>
+                <li class="dropdown">
+                  <a href="/news-and-updates/" data-toggle="dropdown" data-target="#" class="dropdown-toggle">News &amp; Updates <span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="/news-and-updates/">News &amp; Updates</a></li>
+                    <li class="divider"></li>
+                    <li class="nav-header">Categories</li>
+                    <li><a href="/category/announcements/">Announcements</a></li>
+                    <li><a href="/category/resources/">Resources</a></li>
+                    <li><a href="/category/photos/">Photos</a></li>
+                    <li><a href="/category/videos/">Videos</a></li>
+                  </ul>
+                </li>
+                <li><a href="/meetings-and-events/">Meetings &amp; Events</a></li>
+                <li><a href="/our-favourite-pubs/">Our Favourite Pubs</a></li>
+                <li><a href="/contact/">Contact Us</a></li>
+                <li class="active"><a href="/forum/">Forum</a></li>
               </ul>
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
