--- a/template/viewforum_body.html
+++ b/template/viewforum_body.html
@@ -115,23 +115,22 @@
 	</form>
 
   <div class="row-fluid">
-    <div class="span6">
+    <!-- IF PREVIOUS_PAGE or NEXT_PAGE -->
+    <div class="span12">
       <!-- IF PREVIOUS_PAGE -->
         <a class="btn btn-info" href="{PREVIOUS_PAGE}">
           <i class="icon-chevron-left icon-white"></i> {L_PREVIOUS}
         </a>
       <!-- ENDIF -->
-    </div>
-    <div class="span6">
       <!-- IF NEXT_PAGE -->
         <a class="btn btn-info pull-right" href="{NEXT_PAGE}">
           {L_NEXT} <i class="icon-chevron-right icon-white"></i>
         </a>
       <!-- ENDIF -->
     </div>
+    <hr class="divider" />
+    <!-- ENDIF -->
   </div>
-
-  <hr class="divider" />
 <!-- ENDIF -->
 
 <!-- IF .topicrow and not S_DISPLAY_ACTIVE -->
@@ -140,6 +139,8 @@
   </div>
 </div>
 <!-- ENDIF -->
+
+<hr class="divider" />
 
 <!-- INCLUDE jumpbox.html -->
 
