--- a/template/viewtopic_body.html
+++ b/template/viewtopic_body.html
@@ -216,28 +216,29 @@
     </form>
 
   <div class="row-fluid">
-    <div class="span6">
+    <!-- IF PREVIOUS_PAGE or NEXT_PAGE -->
+    <div class="span12">
       <!-- IF PREVIOUS_PAGE -->
         <a class="btn btn-info" href="{PREVIOUS_PAGE}">
           <i class="icon-chevron-left icon-white"></i> {L_PREVIOUS}
         </a>
       <!-- ENDIF -->
-    </div>
-    <div class="span6 text-right">
       <!-- IF NEXT_PAGE -->
-        <a class="btn btn-info" href="{NEXT_PAGE}">
+        <a class="btn btn-info pull-right" href="{NEXT_PAGE}">
           {L_NEXT} <i class="icon-chevron-right icon-white"></i>
         </a>
       <!-- ENDIF -->
     </div>
+    <hr class="divider" />
+    <!-- ENDIF -->
   </div>
-
-  <hr class="divider" />
 <!-- ENDIF -->
 
-<div class="row-fluid topic-actions">
+<div class="row-fluid">
   <!-- INCLUDE viewtopic_buttons.html -->
 </div>
+
+<hr class="divider" />
 
 <!-- INCLUDE jumpbox.html -->
 
