Fix the positioning of the divider.

--- a/template/viewforum_body.html
+++ b/template/viewforum_body.html
@@ -128,9 +128,12 @@
         </a>
       <!-- ENDIF -->
     </div>
-    <hr class="divider" />
     <!-- ENDIF -->
   </div>
+
+  <!-- IF PREVIOUS_PAGE or NEXT_PAGE -->
+    <hr class="divider" />
+  <!-- ENDIF -->
 <!-- ENDIF -->
 
 <!-- IF .topicrow and not S_DISPLAY_ACTIVE -->
