--- a/template/viewtopic_body.html
+++ b/template/viewtopic_body.html
@@ -229,9 +229,12 @@
         </a>
       <!-- ENDIF -->
     </div>
-    <hr class="divider" />
     <!-- ENDIF -->
   </div>
+
+  <!-- IF PREVIOUS_PAGE or NEXT_PAGE -->
+    <hr class="divider" />
+  <!-- ENDIF -->
 <!-- ENDIF -->
 
 <div class="row-fluid">
