Update the registration page and agreement.

--- a/template/ucp_register.html
+++ b/template/ucp_register.html
@@ -33,6 +33,14 @@
       </div>
       <!-- ENDIF -->
 
+      <div class="alert alert-error">
+        <div>
+          Please use your <strong>FULL, REAL NAME</strong> as your username, and
+          a <strong>RECENT PICTURE OF YOU</strong> as an avatar, if you do not, you will be
+          asked to change them.
+        </div>
+      </div>
+
       <div class="control-group">
         <label for="username" class="control-label">{L_USERNAME}:</label>
         <div class="controls">
