--- a/template/ucp_agreement.html
+++ b/template/ucp_agreement.html
@@ -32,6 +32,14 @@
         <p><!-- IF S_SHOW_COPPA -->{L_COPPA_BIRTHDAY}<!-- ELSE -->{L_TERMS_OF_USE}<!-- ENDIF --></p>
 
         <hr class="dashed" />
+
+        <p>
+          The purpose of this forum is to act as an extension to our monthly meetings; a place where discussion can continue throughout the month. For this reason, access to most of the content is restricted to our current club members.
+          <br /><br />
+          If you’re a member of the club already, please use <a href="/forum/viewtopic.php?f=12&t=6" target="_blank">this thread</a> to request access to the rest of the forum. To make the forum feel like a club meeting, your forum name should be your full name and you’re encouraged to use a photo of yourself as an avatar.
+        </p>
+
+        <hr class="dashed" />
         <fieldset class="submit-buttons">
           <!-- IF S_SHOW_COPPA -->
             <strong><a href="{U_COPPA_NO}" class="btn btn-primary">{L_COPPA_NO}</a></strong>&nbsp; <a href="{U_COPPA_YES}" class="btn btn-danger">{L_COPPA_YES}</a>
