--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -72,7 +72,7 @@
 
   <link href="{T_THEME_PATH}/print.css" rel="stylesheet" type="text/css" media="print" title="printonly" />
   <link href="{T_STYLESHEET_LINK}" rel="stylesheet" type="text/css" media="screen, projection" />
-  
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -134,6 +134,7 @@
                   </ul>
                 </li>
                 <li><a href="/meetings-and-events/">Meetings &amp; Events</a></li>
+                <li><a href="/uk-homebrew-calendar/">Calendar</a></li>
                 <li><a href="/our-favourite-pubs/">Our Favourite Pubs</a></li>
                 <li><a href="/contact/">Contact Us</a></li>
                 <li class="active"><a href="/forum/">Forum</a></li>
