--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -96,6 +96,21 @@
       <div id="mobile-header" class="container hidden-desktop hidden-tablet visible-mobile">
         <h3><a href="/">London Amateur Brewers</a></h3>
       </div>
+
+      <!-- IF S_DISPLAY_SEARCH and not S_IN_SEARCH -->
+        <div id="search-box" class="pull-right visible-desktop visible-tablet hidden-mobile" style="padding-top:50px;">
+          <form action="{U_SEARCH}" method="get" id="search" class="form-search">
+            <div class="input-append">
+              <input name="keywords" type="text" maxlength="128" title="{L_SEARCH_KEYWORDS}" class="span2 search-query" placeholder="<!-- IF SEARCH_WORDS-->{SEARCH_WORDS}<!-- ELSE -->{L_SEARCH_MINI}<!-- ENDIF -->" onclick="if(this.value=='{LA_SEARCH_MINI}')this.value='';" onblur="if(this.value=='')this.value='{LA_SEARCH_MINI}';" />
+              <button class="btn" type="submit"><i class="icon-search"></i> {L_SEARCH}</button><br />
+            </div>
+            <div style="text-align:right;">
+              <a href="{U_SEARCH}" title="{L_SEARCH_ADV_EXPLAIN}">{L_SEARCH_ADV}</a> {S_SEARCH_HIDDEN_FIELDS}
+            </div>
+          </form>
+        </div>
+      <!-- ENDIF -->
+
       <div id="desktop-header" class="container visible-desktop visible-tablet hidden-mobile">
         <h1><a href="/">London Amateur Brewers</a></h1>
         <p class="strapline">
