Add a resources link into the header.

--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -150,6 +150,7 @@
                     <li><a href="/category/videos/">Videos</a></li>
                   </ul>
                 </li>
+                <li><a href="/category/resources/">Resources</a></li>
                 <li><a href="/meetings-and-events/">Meetings &amp; Events</a></li>
                 <li><a href="/uk-homebrew-calendar/">Calendar</a></li>
                 <li><a href="/our-favourite-pubs/">Our Favourite Pubs</a></li>
