Update menu to match main site

--- a/template/overall_header.html
+++ b/template/overall_header.html
@@ -138,8 +138,11 @@
             <div class="nav-collapse collapse">
               <ul class="nav">
                 <li><a href="/">About Us</a></li>
+                <li><a href="/the-history-of-lab/">The History of LAB</a></li>
+                <li><a href="/roll-of-honour-medals/">Roll of Honour &amp; Medals</a></li>
+                <li><a href="/contact/">Contact Us</a></li>
                 <li class="dropdown">
-                  <a href="/news-and-updates/" data-toggle="dropdown" data-target="#" class="dropdown-toggle">News &amp; Updates <span class="caret"></span></a>
+                  <a href="#" data-toggle="dropdown" data-target="#" class="dropdown-toggle">Everything&nbsp;Else <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="/news-and-updates/">News &amp; Updates</a></li>
                     <li class="divider"></li>
@@ -148,13 +151,12 @@
                     <li><a href="/category/resources/">Resources</a></li>
                     <li><a href="/category/photos/">Photos</a></li>
                     <li><a href="/category/videos/">Videos</a></li>
+                    <li class="divider"></li>
+                    <li><a href="/meetings-and-events/">Meetings &amp; Events</a></li>
+                    <li><a href="/uk-homebrew-calendar/">Calendar</a></li>
+                    <li><a href="/our-favourite-pubs/">Our Favourite Pubs</a></li>
                   </ul>
                 </li>
-                <li><a href="/category/resources/">Resources</a></li>
-                <li><a href="/meetings-and-events/">Meetings &amp; Events</a></li>
-                <li><a href="/uk-homebrew-calendar/">Calendar</a></li>
-                <li><a href="/our-favourite-pubs/">Our Favourite Pubs</a></li>
-                <li><a href="/contact/">Contact Us</a></li>
               </ul>
               <ul class="nav pull-right">
                 <li class="active"><a href="/forum/">Members Forum</a></li>
